--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
 	<head>
-		<title>:: ocelotl | nepohualtzitzin</title>
+		<title>:: ocelotl | platformer</title>
   
 		<meta charset="utf-8">
 		<link rel="stylesheet" type="text/css" href="style.css" >
