--- a/index.html
+++ b/index.html
@@ -26,13 +26,13 @@
     			document.getElementById("tecla").innerHTML = x;
   			});
   			$(document).keyup(function(){
-    			document.getElementById("tecla").innerHTML = "Amitla";
+    			document.getElementById("tecla").innerHTML = "0";
   			});
 		});
 		</script>
 	 </head>
 	 <body>
-		<p class="indicador">Tecla: <span id="tecla"></span></p>
+		<div id="tecla"></div>
 		 
 		<div class="CanvasDiv">
                 <div id="RendererMain"></div>
